tests/errors/lifetime/unborrow/unborrow_of_non_ref_type.sim

        fn f(x: i64) {
          entry:
            unborrow x;
            return
        }
        